# rusty-seccomp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
test/: child-process.test.js  http-server.test.js  index.js  parse-syslog.js  profile.sh  seccomp-rules.js  seccomp_profile_playwright.json
